Model works as expected, integrated fully, now to actually finish the login process.

--- a/Deployment/flaskapp/templates/index.html
+++ b/Deployment/flaskapp/templates/index.html
@@ -29,7 +29,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Make Predictions</h5>
                         <p class="card-text">Upload your data and get predictions from the RNN model.</p>
-                        <a href="/ui/predict" class="btn btn-primary">Go to Prediction</a>
+                        <a href="ui/predict" class="btn btn-primary">Go to Prediction</a>
                     </div>
                 </div>
             </div>
